package edu.hitsz.bullet;

/**
 * @Author hitsz
 */
public class EnemyBullet extends AbstractBullet {

    public EnemyBullet(double locationX, double locationY, double speedX, double speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
